<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="it.luccap11.android.ozono.model.viewmodels.WeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainSearchFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_rectangle"
        android:backgroundTint="@color/background_color_search"
        android:padding="@dimen/element_padding_xsmall"
        tools:context=".ui.main.SearchFragment">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundTint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:queryHint="@string/city_label" />

        <ProgressBar
            android:id="@+id/citiesDataLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateTint="?attr/colorControlNormal"
            android:layout_marginStart="@dimen/element_padding_small"
            android:layout_marginEnd="@dimen/element_padding_small"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/citiesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/element_padding_small"
            android:layout_marginEnd="@dimen/element_padding_small"
            android:elevation="30dp"
            android:visibility="gone"
            app:listCitiesData="@{viewModel.citiesData}"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/searchView"
            app:layout_constraintStart_toStartOf="@+id/searchView"
            app:layout_constraintTop_toBottomOf="@+id/citiesDataLoading"
            tools:listitem="@layout/city_row_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>