<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="it.luccap11.android.ozono.model.viewmodels.WeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.WeatherDataFragment">

        <ImageView
            android:id="@+id/emptyWeatherImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty_content_descr"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_eyes_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultMessage"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_padding_medium"
            android:padding="@dimen/element_padding_medium"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/no_data_label"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="40sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emptyWeatherImage"
            tools:text="@string/no_data_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listWeatherData"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/element_padding_medium"
            android:scrollbars="vertical"
            android:visibility="gone"
            app:listWeatherData="@{viewModel.weatherData}"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/weather_row_item" />

        <ProgressBar
            android:id="@+id/weatherDataLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="?attr/colorControlNormal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>