...
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundTint="@color/blue"
        android:background="@drawable/round_rectangle"
        android:backgroundTint="@color/background_dark_color_elements"
        android:padding="@dimen/element_padding_small"
...
        android:layout_marginStart="@dimen/element_padding_small"
        android:layout_marginEnd="@dimen/element_padding_small"
        android:elevation="30dp"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/citiesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/round_rectangle"
        android:backgroundTint="@color/background_dark_color_elements"
        android:elevation="30dp"
...
